# CppUtil

./: README.md  util.hpp
.github/workflows/: clang.yml  coverage.yml  gcc.yml  msvc.yml  test.yml
include/: .clang-format  util.hpp
test/: CMakeLists.txt  main.cpp
